fix: text overflow

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,9 @@
 
 html {
   scroll-behavior: smooth;
+  ::-webkit-scrollbar {
+    display: none;
+    }
 }
 
 body {
